Adicionando classes utilitárias

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </head>
 
   <body>
-    <h1>Quem canta seus males espanta</h1>
+    <header class="container even-col">
+      <h2>Lado A</h2>
+      <h2>Lado B</h2>
+    </header>
   </body>
 </html>
