Estilizando os botões

--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
 
   <body>
     <header class="container even-col">
-      <h2>Lado A</h2>
-      <h2>Lado B</h2>
+      <a href="#" class="btn btn-sm">Label</a>
+      <a href="#" class="btn btn-md">Label</a>
+      <button href="#" class="btn btn-lg primary">Label</button>
+    </header>
+
+    <header class="container even-col">
+      <a href="#" class="btn btn-sm" aria-label="Label"></a>
+      <a href="#" class="btn btn-md" aria-label="Label"></a>
+      <button href="#" class="btn btn-lg primary" aria-label="Label"></button>
     </header>
   </body>
 </html>
