Componente de menu e social links

--- a/index.html
+++ b/index.html
@@ -21,16 +21,9 @@
   </head>
 
   <body>
-    <header class="container even-col">
-      <a href="#" class="btn btn-sm">Label</a>
-      <a href="#" class="btn btn-md">Label</a>
-      <button href="#" class="btn btn-lg primary">Label</button>
-    </header>
-
-    <header class="container even-col">
-      <a href="#" class="btn btn-sm" aria-label="Label"></a>
-      <a href="#" class="btn btn-md" aria-label="Label"></a>
-      <button href="#" class="btn btn-lg primary" aria-label="Label"></button>
-    </header>
+    <a href="#" class="social" aria-label="TikTok"></a>
+    <a href="#" class="social" aria-label="Instagram"></a>
+    <a href="#" class="social" aria-label="Discord"></a>
+    <a href="#" class="social" aria-label="Twitter/X"></a>
   </body>
 </html>
