--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
   </head>
 
   <body>
-    <a href="#" class="social" aria-label="TikTok"></a>
-    <a href="#" class="social" aria-label="Instagram"></a>
-    <a href="#" class="social" aria-label="Discord"></a>
-    <a href="#" class="social" aria-label="Twitter/X"></a>
+    <header>
+      <div class="container py-base">
+        <nav class="flex items-center gap-2.4rem">
+          <a href="/"><img src="./assets/Logo.svg" alt="Logomarca Zingen" /></a>
+
+          <ul role="list" class="flex items-center gap-2.4rem">
+            <li class="desktop-only"><a href="#">Conheça o app</a></li>
+            <li class="desktop-only"><a href="#">Funcionalidades</a></li>
+            <li class="desktop-only"><a href="#">Planos e preços</a></li>
+            <li>
+              <a href="#about" class="btn btn-md">Baixar agora</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
