--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Quem canta seus males espanta</h1>
         <p>Cantar nunca foi tão fácil</p>
 
-        <div class="buttons flex items-center gap-1rem">
+        <div class="buttons flex items-center gap-1.6rem">
           <a href="#pricing" class="btn btn-md" aria-label="Ver planos"></a>
           <a href="#download" class="btn btn-md">Baixar agora</a>
         </div>
@@ -143,6 +143,113 @@
           </div>
 
           <img class="desktop-only" src="./assets/images/Tela 3.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section id="pricing">
+      <div class="container py-xl">
+        <header>
+          <strong>Planos e preços</strong>
+          <h2>Assine e tenha acesso ilimitado a todas as funcionalidades</h2>
+        </header>
+
+        <div class="cards even-col gap-2.4rem items-center">
+          <div class="card py-lg px-lg">
+            <h3>Básico</h3>
+            <p>Baixe o app e comece a cantar agora mesmo!</p>
+
+            <zin-pricing>Grátis</zin-pricing>
+            <a
+              href="#download"
+              class="btn btn-md"
+              aria-label="Baixar agora"
+            ></a>
+
+            <div class="separator"></div>
+
+            <ul role="list" class="grid gap-1.6rem">
+              <li>
+                <img src="./assets/icons/Check.svg" alt="" />
+                Com anúncios
+              </li>
+
+              <li>
+                <img src="./assets/icons/Check.svg" alt="" />
+                Até 5 músicas por dia
+              </li>
+
+              <li>
+                <img src="./assets/icons/Check.svg" alt="" />
+                Cante apenas as músicas disponíveis no plano gratuito
+              </li>
+            </ul>
+          </div>
+
+          <div class="premium">
+            <div class="card py-lg px-lg">
+              <span>1 mês grátis</span>
+
+              <h3>Premium</h3>
+              <p>Ideal para quem já cansou de passar vergonha no Karaokê</p>
+
+              <zin-pricing>R$ 24,90 <small>/mês</small></zin-pricing>
+              <a href="#download" class="btn btn-md">Experimente de graça</a>
+
+              <div class="separator"></div>
+
+              <ul role="list" class="grid gap-1.6rem">
+                <li>
+                  <img src="./assets/icons/Check.svg" alt="" />
+                  Sem interrupção de anúncios
+                </li>
+
+                <li>
+                  <img src="./assets/icons/Check.svg" alt="" />
+                  Cante quantas músicas quiser
+                </li>
+
+                <li>
+                  <img src="./assets/icons/Check.svg" alt="" />
+                  Cante todas as músicas da biblioteca
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="card py-lg px-lg">
+            <h3>Família</h3>
+            <p>Para aquelas famílias que adoram se reunir pra cantar</p>
+
+            <zin-pricing> R$ 21,90 <small>/mês por pessoa</small></zin-pricing>
+
+            <a
+              href="#download"
+              class="btn btn-md"
+              aria-label="Assinar agora"
+            ></a>
+
+            <div class="separator"></div>
+
+            <ul role="list" class="grid gap-1.6rem">
+              <li>
+                <img src="./assets/icons/Check.svg" alt="" />
+                Sem interrupção de anúncios
+              </li>
+
+              <li>
+                <img src="./assets/icons/Check.svg" alt="" />
+                Cante quantas músicas quiser
+              </li>
+
+              <li>
+                <img src="./assets/icons/Check.svg" alt="" />
+                Cante todas as músicas da biblioteca
+              </li>
+            </ul>
+
+            <small>Mínimo de 4 pessoas no plano família.</small>
+          </div>
         </div>
       </div>
     </section>
