--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
           <a href="/"><img src="./assets/Logo.svg" alt="Logomarca Zingen" /></a>
 
           <ul role="list" class="flex items-center gap-2.4rem">
-            <li class="desktop-only"><a href="#">Conheça o app</a></li>
-            <li class="desktop-only"><a href="#">Funcionalidades</a></li>
-            <li class="desktop-only"><a href="#">Planos e preços</a></li>
+            <li class="desktop-only"><a href="#about">Conheça o app</a></li>
+            <li class="desktop-only">
+              <a href="#features">Funcionalidades</a>
+            </li>
+            <li class="desktop-only"><a href="#pricing">Planos e preços</a></li>
             <li>
               <a href="#about" class="btn btn-md">Baixar agora</a>
             </li>
@@ -293,5 +295,46 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container grid py-xl">
+        <section class="top grid">
+          <img src="./assets/Logo.svg" alt="Logomarca Zingen" />
+
+          <nav class="even-col">
+            <ul role="list" class="grid gap-2.4rem">
+              <li class="title">Produto</li>
+              <li><a href="#features">Funcionalidades</a></li>
+              <li><a href="#pricing">Planos e preços</a></li>
+              <li><a href="#download">Download</a></li>
+            </ul>
+
+            <ul role="list" class="grid gap-2.4rem">
+              <li class="title">Empresa</li>
+              <li><a href="#">Sobre nós</a></li>
+              <li><a href="#">Trabalhe conosco</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+
+            <ul role="list" class="grid gap-2.4rem">
+              <li class="title">Legal</li>
+              <li><a href="#">Termos de uso</a></li>
+              <li><a href="#">Política de privacidade</a></li>
+            </ul>
+          </nav>
+        </section>
+
+        <section class="bottom flex">
+          <div class="flex gap-2.4rem">
+            <a href="#" class="social" aria-label="TikTok"></a>
+            <a href="#" class="social" aria-label="Instagram"></a>
+            <a href="#" class="social" aria-label="Twitter/X"></a>
+            <a href="#" class="social" aria-label="Discord"></a>
+          </div>
+
+          <span class="copy">©2024 Zingen Technologies, Inc.</span>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
